tests/regression/000_CORE_LANGUAGE/020_EVENTS_FLOWS/020_012_reject_pub_proc/expected.txt
error[PARSE003]: 'pub' is not valid on proc declarations - only events can be public
  --> tests/regression/000_CORE_LANGUAGE/020_EVENTS_FLOWS/020_012_reject_pub_proc/input.kz:9:1
    |
 9 | ~pub proc greet {
    | ^

